assets/sass/partials/_main.scss
/* ... */
/**
 * Newsletter Widget
 */

.widget-yns {
	form {
		label {
			display: block;
			font: {
				size: $f_sidebarLabel-px;
				size: $f_sidebarLabel;
				weight: 700;
			}
      color: $c_sidebarLabel;
		}
    input[type="text"] {
      width: 100%;
      margin: {
        bottom: 10px;
      }
    }
    .yst-newsletter-input-wrapper {
      position:relative;
      height:38px;
      max-width:100%;
      input {
        padding: 8px;
        margin: {
          bottom: 10px;
        }
        &[type="text"] {
          position: absolute;
          top:0;
          height:100%;
          padding: {
            right: 40px;
          }
        }
        &[type="submit"] {
          height:100%;
          position: absolute;
          top:0;
          right:0;
          font: {
            size: 24px;
          }
          padding: 0 11px;
          margin:0;
        }
      }
    }
	}
}

/**
 * Newletter Widget additions for after-post area
 */

.yoast-after-post-widget {
	padding: {
      top:  20px;
    }
	margin: {
		bottom: 36px;
	}
    .widget-title {
      background: {
        image: image-url($c_ContentWidthDivider);
      }
    }
	.widget-yns {
        padding: 20px;
        border: {
        	width: 1px;
        	style: solid;
        	color: $c_hrLine;
        }
        margin: {
            bottom: 32px;
        }
        .widget-wrap {
            padding:0;
        }
		.widget-title,
		p,
		form {
			padding: {
				left: 0;
			}
		}
		.widget-title {
            text-align:left;
			margin: 0;
            padding:0;
			background: {
                image: none;
				color: $c_mainBg;
			}
		}
	}
}

/**
 * Social Media Widget / User Profile
 */

.widget_socials {
	margin: {
		bottom: 40px;
	}
}

#yst_social_widget,
.yst-user-profile .social {
	line-height: 32px;
	margin: {
		bottom: 40px;
	}
	a {
		display: block;
		width: 32px;
		height: 32px;
		float: left;
		margin: {
			right: 10px;
		}
		background: {
			image: image-url('social_sprites.png');
			repeat: no-repeat;
		}
	}
	.btn-fb,
	.btn-fb a {
		background: {
			position: -40.000030517578125px -80.00001525878906px;
		}
	}
	.btn-gp,
	.btn-gp a {
		background: {
			position: -41.000030517578125px -40.00001525878906px;
		}
	}
	.btn-li,
	.btn-li a {
		background: {
			position: -40.000030517578125px 0;
		}
	}
	.btn-pin,
	.btn-pin a {
		background: {
			position: 0 -121.00001525878906px;
		}
	}
	.btn-rss,
	.btn-rss a {
		background: {
			position: 0 -80.00001525878906px;
		}
	}
	.btn-tw,
	.btn-tw a {
		background: {
			position: 0 -40px;
		}
	}
	.btn-yt,
	.btn-yt a {
		background: {
			position: 0 0;
		}
	}
	.ysw_url {
		border: {
			spacing: 0;
		}
		width: 100%;
		clear: both;
		margin: 0;
	}
	.ysw_flw_wrapper {
		z-index: 10;
		margin: {
			top: 75%;
			right: -5px;
		}
		text: {
			align: center;
		}
		min-width: 20px;
		float: right;
		background: {
			color: $c_ctaBgGrey; // fallback
		}
		@include background-image(linear-gradient($c_ctaBgGrey, $c_ctaBgWhite));
		vertical-align: bottom;
		padding: 0 1px;
		line-height: 1em;
		border: {
			width: 1px;
			style: solid;
			color: $c_ctaBorderGrey;
			radius: 5px;
		}
		.ysw_flw {
			color: $c_ctaTextBlack;
			font: {
				size: 0.7em;
				weight: 300;
			}
		}
	}
}

#yst_social_widget {
	a {
		margin: {
			bottom: 20px;
		}
	}
}

.yst-user-profile {
	.posts-link {
		padding: {
			left: 10px;
		}
		font: {
			weight: 700;
		}
	}
	.yst-social-readmore {
		padding: {
			bottom: 0;
			left: 10px;
		}
	}
}

/**
  * Author box social profile links
  *
  * @todo Could perhaps be merged width social buttons in #yst_social_widget
  */

.author_social {
	line-height: 32px;
	margin: {
		bottom: 40px;
	}
	a {
		display: block;
		width: 32px;
		height: 32px;
		float: left;
		margin: {
			right: 10px;
            bottom: 8px;
		}
		background: {
			image: image-url('social_sprites.png');
			repeat: no-repeat;
		}
	}
	.facebook a {
		background: {
			position: -40.000030517578125px -80.00001525878906px;
		}
	}
	.googleplus a {
		background: {
			position: -41.000030517578125px -40.00001525878906px;
		}
	}
	.linkedin a {
		background: {
			position: -40.000030517578125px 0;
		}
	}
	.pinterest a {
		background: {
			position: 0 -121.00001525878906px;
		}
	}
	.twitter a {
		background: {
			position: 0 -40px;
		}
	}
}

/**
 * Facebook Like Box
 * Banner widget
 */

.yst_fb_widget,
.widget_banner {
	.widget-title {
		background: {
			color: $c_mainBg;
			image: none;
		}
		color: $c_sidebarH4;
		padding: 10px 10px 0 0;
		margin: {
			bottom: 16px;
		}
		+ div {
			padding: {
				left: 0;
			}
		}
	}
}
.yst-banner-widget {
    text: {
        align:center;
    }
}

//Optional styling for fb-widget
//.yst_fb_widget {
// .fb-dark-bg {
// }
// .fb-light-bg {
// }
//}

/**
 * Full Width Widgets
 */

#yoast-fullwidth-bottom-container {
	clear: both;
	margin: {
		top: 36px;
	}
	.yoast-fullwidth-widget {
		float: left;
		width: $d_ThreeEqualColumns;
	}
	#yoast-fullwidth-widgetarea-1,
	#yoast-fullwidth-widgetarea-2,
	#yoast-fullwidth-widgetarea-2 {
		max-width: 50%;
	}

	#yoast-fullwidth-widgetarea-2 {
		margin: 0 29px;
	}
	.widget {
		padding: {
			bottom: 24px;
		}
	}
	.widget-title {
		@extend .widget-title;
	}
	.tagcloud,
	.search-form {
		padding: {
			left: 10px;
			right: 10px;
		}
	}
}
/* ... */

